Creación entidades y repositories

--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,8 @@
             "require": "4.4.*",
             "docker": false
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "*"
     }
 }
