Creación y modificación de factory, migraciones y fixtures

--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "*"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "*",
+        "zenstruck/foundry": "^1.23"
     }
 }
